# pyMANGA

./: .gitignore  CMakeLists.txt  CppBackend.md  README.md  annotated.html  annotated_dup.js  classes.html  classpyMANGA_1_1PopulationLib_1_1GroupPlanting_1_1GroupPlanting-members.html  classpyMANGA_1_1PopulationLib_1_1GroupPlanting_1_1GroupPlanting.html  classpyMANGA_1_1PopulationLib_1_1GroupPlanting_1_1GroupPlanting.js  classpyMANGA_1_1PopulationLib_1_1GroupPlanting_1_1GroupPlanting__coll__graph.dot  classpyMANGA_1_1PopulationLib_1_1GroupPlanting_1_1GroupPlanting__inherit__graph.md5  classpyMANGA_1_1PopulationLib_1_1Population_1_1Population-members.html  classpyMANGA_1_1PopulationLib_1_1Population_1_1Population.html  classpyMANGA_1_1PopulationLib_1_1Population_1_1Population__coll__graph.md5  classpyMANGA_1_1PopulationLib_1_1Population_1_1Population__inherit__graph.dot  classpyMANGA_1_1PopulationLib_1_1TreeGroup_1_1TreeGroup-members.html  classpyMANGA_1_1PopulationLib_1_1TreeGroup_1_1TreeGroup.html  classpyMANGA_1_1PopulationLib_1_1TreeGroup_1_1TreeGroup.js  classpyMANGA_1_1PopulationLib_1_1Tree_1_1Tree-members.html  classpyMANGA_1_1PopulationLib_1_1Tree_1_1Tree.html  classpyMANGA_1_1PopulationLib_1_1Tree_1_1Tree.js  classpyMANGA_1_1ProjectLib_1_1Project_1_1MangaProject-members.html  classpyMANGA_1_1ProjectLib_1_1Project_1_1MangaProject.html  classpyMANGA_1_1ProjectLib_1_1Project_1_1MangaProject.js  classpyMANGA_1_1ProjectLib_1_1Project_1_1MangaProject__inherit__graph.dot  classpyMANGA_1_1ProjectLib_1_1Project_1_1MangaProject__inherit__graph.md5  classpyMANGA_1_1ProjectLib_1_1XMLtoProject_1_1XMLtoProject-members.html  classpyMANGA_1_1ProjectLib_1_1XMLtoProject_1_1XMLtoProject.html  classpyMANGA_1_1ProjectLib_1_1XMLtoProject_1_1XMLtoProject.js  classpyMANGA_1_1ProjectLib_1_1XMLtoProject_1_1XMLtoProject__inherit__graph.dot  classpyMANGA_1_1ProjectLib_1_1XMLtoProject_1_1XMLtoProject__inherit__graph.md5  classpyMANGA_1_1TimeLoopLib_1_1SimpleTimeLoop_1_1SimpleLoop_1_1Loop-members.html  classpyMANGA_1_1TimeLoopLib_1_1SimpleTimeLoop_1_1SimpleLoop_1_1Loop.html  classpyMANGA_1_1TimeLoopLib_1_1SimpleTimeLoop_1_1SimpleLoop_1_1Loop.js  classpyMANGA_1_1TimeLoopLib_1_1TreeDynamicTimeLoop_1_1TreeDynamicTimeLoop-members.html  classpyMANGA_1_1TimeLoopLib_1_1TreeDynamicTimeLoop_1_1TreeDynamicTimeLoop.html  classpyMANGA_1_1TimeLoopLib_1_1TreeDynamicTimeLoop_1_1TreeDynamicTimeLoop.js  classpyMANGA_1_1TimeLoopLib_1_1TreeDynamicTimeStepping_1_1TreeDynamicTimeStepping-members.html  classpyMANGA_1_1TimeLoopLib_1_1TreeDynamicTimeStepping_1_1TreeDynamicTimeStepping.html  (+66 more)
Benchmarks/: BenchmarkList.xml  test_Benchmarks_CI.py
Benchmarks/ExampleSetups/OGSExampleSetup/: NetwOGS3D_SAZOI_BETTINA.xml  OGS3D_SAZOI_BETTINA.xml
Benchmarks/ExampleSetups/OGSExampleSetup/OGS/: MakeGrid.py
Benchmarks/ModuleBenchmarks/: ModuleBenchmarks.md
Benchmarks/ModuleBenchmarks/DisturbanceLib/: initial_population.csv
Benchmarks/ModuleBenchmarks/DisturbanceLib/Hurricane/: Hurricane.xml  Hurricane_CI.xml
Benchmarks/ModuleBenchmarks/DisturbanceLib/Lightning/: Lightning.xml  Lightning_CI.xml
Benchmarks/ModuleBenchmarks/OutputModules/OneFile/: OneFile.xml  OneFile_CI.xml
Benchmarks/ModuleBenchmarks/OutputModules/OneFilePerGroup/: OneFilePerGroup.xml  OneFilePerGroup_CI.xml
Benchmarks/ModuleBenchmarks/OutputModules/OnePlantOneFile/: OnePlantOneFile.xml  OnePlantOneFile_CI.xml
Benchmarks/ModuleBenchmarks/OutputModules/OnePlantOneFile_2/: OnePlantOneFile_2.xml  OnePlantOneFile_2_CI.xml
Benchmarks/ModuleBenchmarks/OutputModules/OneTimestepOneFile/: OneTimestepOneFile.xml  OneTimestepOneFile_CI.xml
Benchmarks/ModuleBenchmarks/OutputModules/OneTimestepOneFilePerGroup/: OneTimestepOneFilePerGroup.xml  OneTimestepOneFilePerGroup_CI.xml
Benchmarks/ModuleBenchmarks/PlantModules/Bettina/Default/: Default.xml  Default_CI.xml  ReferenceTree.xml
Benchmarks/ModuleBenchmarks/PlantModules/Default/: Default.xml  Default_CI.xml
Benchmarks/ModuleBenchmarks/PlantModules/Jabowa/Default/: Default.xml  Default_CI.xml  ReferenceTree.xml
Benchmarks/ModuleBenchmarks/PlantModules/TwoPlantModules/: 2Plants.xml  2Plants_CI.xml
Benchmarks/ModuleBenchmarks/Population/Dispersal/Distance2Parent/: Distance2Parent.xml  Distance2Parent_CI.xml
Benchmarks/ModuleBenchmarks/Population/Dispersal/Uniform/: Uniform.xml  (+1 more)
Benchmarks/ModuleBenchmarks/Population/RandomWeights/: RandomWeights.xml  RandomWeights_CI.xml
DisturbanceLib/: Disturbance.md  Disturbance.py  DisturbanceModel.md  DisturbanceModel.py  __init__.py
DisturbanceLib/Hurricane/: Hurricane.md  Hurricane.py  __init__.py
DisturbanceLib/Lightning/: Lightning.md  Lightning.py  __init__.py
Documentation/: generate_tag_documentation.py
ModelOutputLib/: ModelOutput.py
PlantModelLib/Mortality/RandomGrowth/: RandomGrowth.md
PopulationLib/PopManager/: PlantGroup.py
PopulationLib/Species/TestSpeciesKiwi/: TestSpeciesKiwi.py  __init__.py
ProjectLib/: Project.py  XMLtoProject.py  helpers.py
ResourceLib/: CppBackend.md  ResourceModel.md  ResourceModel.py  __init__.py
ResourceLib/AboveGround/AsymmetricZOI/: AsymmetricZOI.cpp  AsymmetricZOI.md  AsymmetricZOI.py  __init__.py
ResourceLib/BelowGround/Individual/FON/: FON.py
ResourceLib/BelowGround/Individual/FixedSalinity/: FixedSalinity.py
ResourceLib/BelowGround/Individual/SymmetricZOI/: SymmetricZOI.cpp  SymmetricZOI.md  SymmetricZOI.py  __init__.py
TimeLoopLib/: DynamicTimeStep.py
TreeModelLib/AbovegroundCompetition/: AbovegroundCompetition.py
TreeModelLib/BelowgroundCompetition/: BelowgroundCompetition.py  __init__.py
TreeModelLib/BelowgroundCompetition/NetworkFON/: NetworkFON.py  __init__.py
TreeModelLib/BelowgroundCompetition/SimpleHydro/: SimpleHydro.py
TreeModelLib/GrowthAndDeathDynamics/NetworkBettina/: NetworkBettina.py
search/: all_1.js  all_2.js  all_6.js  all_8.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_6.js  classes_7.js  functions_0.js  functions_1.js  searchdata.js  variables_1.js  variables_2.js
test/SmallTests/Test_Setups_small/: SimpleHydro_SAZOI_BETTINA.xml
(+94 files in other folders)
